--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^12.0.2",
     "@types/react": "~19.1.0",
-    "conventional-changelog-conventionalcommits": "^9.1.0",
+    "conventional-changelog-conventionalcommits": "7.0.2",
     "semantic-release": "^25.0.2",
     "typescript": "~5.9.2"
   },
