--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,6 +65,14 @@ jobs:
         with:
           expo-version: latest
 
+      - name: Cache node_modules
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
       - name: Install dependencies
         run: npm ci
 
@@ -78,9 +86,41 @@ jobs:
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
 
+      - name: Cache Gradle dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+            android/.gradle
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
+      - name: Cache Android SDK
+        uses: actions/cache@v4
+        with:
+          path: /usr/local/lib/android/sdk
+          key: ${{ runner.os }}-android-sdk-${{ hashFiles('**/build.gradle*') }}
+          restore-keys: |
+            ${{ runner.os }}-android-sdk-
+
+      - name: Configure Gradle for faster builds
+        working-directory: ./android
+        run: |
+          mkdir -p .gradle
+          cat > gradle.properties << EOF
+          org.gradle.parallel=true
+          org.gradle.configureondemand=true
+          org.gradle.caching=true
+          org.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+          android.useAndroidX=true
+          android.enableJetifier=true
+          EOF
+
       - name: Build Android APK
         working-directory: ./android
-        run: ./gradlew assembleRelease
+        run: ./gradlew assembleRelease --build-cache --parallel --no-daemon --max-workers=2
 
       - name: Rename and move APK
         run: |
@@ -155,11 +195,24 @@ jobs:
         run: |
           mkdir -p ./artifacts
           cd ./ios/build
-          ARCHIVE_NAME=$(find . -name "*.xcarchive" -maxdepth 1 | head -1 | xargs basename -s .xcarchive)
-          APP_NAME=$(find "./$ARCHIVE_NAME/Products/Applications" -name "*.app" -maxdepth 1 | head -1 | xargs basename -s .app)
+          ARCHIVE_PATH=$(find . -name "*.xcarchive" -maxdepth 1 | head -1)
+          if [ -z "$ARCHIVE_PATH" ]; then
+            echo "Error: No .xcarchive found"
+            exit 1
+          fi
+          echo "Found archive: $ARCHIVE_PATH"
+          APP_PATH=$(find "$ARCHIVE_PATH/Products/Applications" -name "*.app" -maxdepth 1 | head -1)
+          if [ -z "$APP_PATH" ]; then
+            echo "Error: No .app found in archive"
+            ls -la "$ARCHIVE_PATH/Products/Applications" || true
+            exit 1
+          fi
+          APP_NAME=$(basename "$APP_PATH")
+          echo "Found app: $APP_NAME"
           mkdir -p Payload
-          cp -r "./$ARCHIVE_NAME/Products/Applications/$APP_NAME.app" Payload/
+          cp -r "$APP_PATH" Payload/
           zip -r ../../artifacts/smart-habit-${{ needs.version.outputs.new_release_version }}.ipa Payload
+          echo "IPA created successfully"
 
       - name: Upload iOS IPA artifact
         uses: actions/upload-artifact@v4
@@ -171,7 +224,7 @@ jobs:
   release:
     name: Create GitHub Release
     runs-on: ubuntu-latest
-    needs: [version, build-android, build-ios]
+    needs: [version]
     if: needs.version.outputs.new_release_published == 'true'
     steps:
       - name: Checkout code
