--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -109,14 +109,17 @@ jobs:
         working-directory: ./android
         run: |
           mkdir -p .gradle
-          cat > gradle.properties << EOF
-          org.gradle.parallel=true
-          org.gradle.configureondemand=true
-          org.gradle.caching=true
-          org.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
-          android.useAndroidX=true
-          android.enableJetifier=true
-          EOF
+          # Append optimization settings to existing gradle.properties (don't overwrite)
+          if [ -f gradle.properties ]; then
+            echo "" >> gradle.properties
+            echo "# Build optimizations" >> gradle.properties
+          else
+            touch gradle.properties
+          fi
+          # Only add settings that don't already exist
+          grep -q "org.gradle.parallel" gradle.properties || echo "org.gradle.parallel=true" >> gradle.properties
+          grep -q "org.gradle.caching" gradle.properties || echo "org.gradle.caching=true" >> gradle.properties
+          grep -q "org.gradle.jvmargs" gradle.properties || echo "org.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8" >> gradle.properties
 
       - name: Build Android APK
         working-directory: ./android
@@ -200,18 +203,26 @@ jobs:
             echo "Error: No .xcarchive found"
             exit 1
           fi
+          # Convert to absolute path
+          ARCHIVE_PATH=$(realpath "$ARCHIVE_PATH" || echo "$ARCHIVE_PATH")
           echo "Found archive: $ARCHIVE_PATH"
-          APP_PATH=$(find "$ARCHIVE_PATH/Products/Applications" -name "*.app" -maxdepth 1 | head -1)
+          echo "Archive contents:"
+          ls -la "$ARCHIVE_PATH" || true
+          echo "Looking for .app bundle..."
+          # Search recursively for the app bundle
+          APP_PATH=$(find "$ARCHIVE_PATH" -name "*.app" -type d | head -1)
           if [ -z "$APP_PATH" ]; then
             echo "Error: No .app found in archive"
-            ls -la "$ARCHIVE_PATH/Products/Applications" || true
+            echo "Searching archive structure:"
+            find "$ARCHIVE_PATH" -type d -maxdepth 3 | head -20 || true
             exit 1
           fi
           APP_NAME=$(basename "$APP_PATH")
-          echo "Found app: $APP_NAME"
+          echo "Found app: $APP_NAME at $APP_PATH"
+          cd ../../artifacts
           mkdir -p Payload
           cp -r "$APP_PATH" Payload/
-          zip -r ../../artifacts/smart-habit-${{ needs.version.outputs.new_release_version }}.ipa Payload
+          zip -r smart-habit-${{ needs.version.outputs.new_release_version }}.ipa Payload
           echo "IPA created successfully"
 
       - name: Upload iOS IPA artifact
@@ -224,8 +235,10 @@ jobs:
   release:
     name: Create GitHub Release
     runs-on: ubuntu-latest
-    needs: [version]
-    if: needs.version.outputs.new_release_published == 'true'
+    needs: [version, build-android, build-ios]
+    if: |
+      always() &&
+      needs.version.outputs.new_release_published == 'true'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
