--- a/package.json
+++ b/package.json
@@ -9,33 +9,38 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-navigation/bottom-tabs": "^7.8.5",
-    "@react-navigation/native": "^7.1.20",
-    "@react-navigation/native-stack": "^7.6.3",
-    "axios": "^1.13.2",
-    "expo": "~54.0.23",
-    "expo-device": "~8.0.9",
-    "expo-location": "~19.0.7",
-    "expo-notifications": "^0.32.12",
-    "expo-secure-store": "~15.0.7",
-    "expo-status-bar": "~3.0.8",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-navigation/bottom-tabs": "7.8.5",
+    "@react-navigation/native": "7.1.20",
+    "@react-navigation/native-stack": "7.6.3",
+    "@shopify/react-native-skia": "2.2.12",
+    "axios": "1.13.2",
+    "expo": "54.0.23",
+    "expo-background-fetch": "~14.0.7",
+    "expo-device": "8.0.9",
+    "expo-location": "19.0.7",
+    "expo-notifications": "0.32.12",
+    "expo-secure-store": "15.0.7",
+    "expo-status-bar": "3.0.8",
+    "expo-task-manager": "~14.0.8",
     "react": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-chart-kit": "^6.12.0",
-    "react-native-safe-area-context": "~5.6.0",
+    "react-native-chart-kit": "6.12.0",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "5.6.2",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.15.0",
-    "victory-native": "^41.20.2"
+    "react-native-svg": "15.12.1",
+    "victory-native": "41.20.2"
   },
   "devDependencies": {
-    "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^12.0.2",
-    "@types/react": "~19.1.0",
+    "@semantic-release/changelog": "6.0.3",
+    "@semantic-release/git": "10.0.1",
+    "@semantic-release/github": "12.0.2",
+    "@types/react": "~19.1.10",
     "conventional-changelog-conventionalcommits": "7.0.2",
-    "semantic-release": "^25.0.2",
-    "typescript": "~5.9.2"
+    "semantic-release": "25.0.2",
+    "typescript": "5.9.3"
   },
   "private": true
 }
