--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -76,11 +76,17 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Update version in app.json
+      - name: Set up environment variables
         run: |
-          node -e "const fs = require('fs'); const app = JSON.parse(fs.readFileSync('app.json')); app.expo.version = '${{ needs.version.outputs.new_release_version }}'; fs.writeFileSync('app.json', JSON.stringify(app, null, 2));"
+          echo "OPENWEATHER_API_KEY=${{ secrets.OPENWEATHER_API_KEY }}" >> $GITHUB_ENV
+
+      - name: Update version in app.config.js
+        run: |
+          node -e "const fs = require('fs'); const content = fs.readFileSync('app.config.js', 'utf8'); const updated = content.replace(/version: ['\"][^'\"]*['\"]/, \"version: '${{ needs.version.outputs.new_release_version }}'\"); fs.writeFileSync('app.config.js', updated);"
 
       - name: Generate native Android project
+        env:
+          OPENWEATHER_API_KEY: ${{ secrets.OPENWEATHER_API_KEY }}
         run: npx expo prebuild --platform android --clean
 
       - name: Setup Android SDK
@@ -177,11 +183,17 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Update version in app.json
+      - name: Set up environment variables
         run: |
-          node -e "const fs = require('fs'); const app = JSON.parse(fs.readFileSync('app.json')); app.expo.version = '${{ needs.version.outputs.new_release_version }}'; fs.writeFileSync('app.json', JSON.stringify(app, null, 2));"
+          echo "OPENWEATHER_API_KEY=${{ secrets.OPENWEATHER_API_KEY }}" >> $GITHUB_ENV
+
+      - name: Update version in app.config.js
+        run: |
+          node -e "const fs = require('fs'); const content = fs.readFileSync('app.config.js', 'utf8'); const updated = content.replace(/version: ['\"][^'\"]*['\"]/, \"version: '${{ needs.version.outputs.new_release_version }}'\"); fs.writeFileSync('app.config.js', updated);"
 
       - name: Generate native iOS project
+        env:
+          OPENWEATHER_API_KEY: ${{ secrets.OPENWEATHER_API_KEY }}
         run: npx expo prebuild --platform ios --clean
 
       - name: Install CocoaPods dependencies
