--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@semantic-release/github": "12.0.2",
     "@types/react": "~19.1.10",
     "conventional-changelog-conventionalcommits": "7.0.2",
+    "dotenv": "^17.2.3",
     "semantic-release": "25.0.2",
     "typescript": "5.9.3"
   },
