feat: improves charts, habits, settings, and workflows

--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
     "@react-navigation/native-stack": "7.6.3",
     "@shopify/react-native-skia": "2.2.12",
     "axios": "1.13.2",
+    "crypto-js": "^4.2.0",
     "expo": "54.0.23",
-    "expo-background-fetch": "~14.0.7",
+    "expo-background-task": "~1.0.9",
     "expo-device": "8.0.9",
     "expo-location": "19.0.7",
     "expo-notifications": "0.32.12",
     "expo-secure-store": "15.0.7",
     "expo-status-bar": "3.0.8",
     "expo-task-manager": "~14.0.8",
+    "oauth-1.0a": "^2.2.6",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-chart-kit": "6.12.0",
@@ -37,6 +39,7 @@
     "@semantic-release/changelog": "6.0.3",
     "@semantic-release/git": "10.0.1",
     "@semantic-release/github": "12.0.2",
+    "@types/crypto-js": "^4.2.2",
     "@types/react": "~19.1.10",
     "conventional-changelog-conventionalcommits": "7.0.2",
     "dotenv": "^17.2.3",
