--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -200,81 +200,238 @@ jobs:
         working-directory: ./ios
         run: pod install
 
-      - name: Detect workspace and scheme
+      - name: Detect workspace, scheme, and product name
         working-directory: ./ios
         id: ios-config
         run: |
           WORKSPACE=$(find . -name "*.xcworkspace" -maxdepth 1 | head -1 | xargs basename -s .xcworkspace)
+          if [ -z "$WORKSPACE" ]; then
+            echo "Error: No .xcworkspace found"
+            exit 1
+          fi
+          
           SCHEME=$(xcodebuild -list -workspace "$WORKSPACE.xcworkspace" 2>/dev/null | grep -A 100 "Schemes:" | grep -v "Schemes:" | head -1 | xargs || echo "$WORKSPACE")
+          
+          # Get the actual product name from the build settings
+          # This is more reliable than assuming it matches the scheme
+          # Try multiple methods to get PRODUCT_NAME
+          PRODUCT_NAME=""
+          if [ -n "$SCHEME" ]; then
+            PRODUCT_NAME=$(xcodebuild -showBuildSettings -workspace "$WORKSPACE.xcworkspace" -scheme "$SCHEME" -configuration Release 2>/dev/null | grep -E "^[ ]*PRODUCT_NAME[ ]*=" | head -1 | sed "s/.*= *//" | xargs)
+          fi
+          
+          # Fallback to scheme name if product name not found
+          if [ -z "$PRODUCT_NAME" ]; then
+            PRODUCT_NAME="$SCHEME"
+          fi
+          
           echo "workspace=$WORKSPACE" >> $GITHUB_OUTPUT
           echo "scheme=$SCHEME" >> $GITHUB_OUTPUT
-          echo "Found workspace: $WORKSPACE, scheme: $SCHEME"
+          echo "product_name=$PRODUCT_NAME" >> $GITHUB_OUTPUT
+          echo "Found workspace: $WORKSPACE, scheme: $SCHEME, product: $PRODUCT_NAME"
 
       - name: Build iOS Archive
         working-directory: ./ios
         run: |
           WORKSPACE="${{ steps.ios-config.outputs.workspace }}.xcworkspace"
           SCHEME="${{ steps.ios-config.outputs.scheme }}"
-          # Archive with SKIP_INSTALL=NO to ensure Products directory is populated
+          PRODUCT_NAME="${{ steps.ios-config.outputs.product_name }}"
+          ARCHIVE_NAME="$SCHEME.xcarchive"
+          ARCHIVE_PATH="./build/$ARCHIVE_NAME"
+          
+          # Clean previous builds
+          rm -rf ./build/$ARCHIVE_NAME
+          mkdir -p ./build
+          
+          echo "Building archive..."
+          echo "Workspace: $WORKSPACE"
+          echo "Scheme: $SCHEME"
+          echo "Product Name: $PRODUCT_NAME"
+          echo "Archive Path: $ARCHIVE_PATH"
+          
+          # Build archive - ensure proper configuration for IPA export
+          # Use SKIP_INSTALL=NO to ensure the app is installed in Products/Applications
           xcodebuild -workspace "$WORKSPACE" \
             -scheme "$SCHEME" \
             -configuration Release \
-            -archivePath ./build/$SCHEME.xcarchive \
+            -archivePath "$ARCHIVE_PATH" \
             -derivedDataPath ./build/DerivedData \
             archive \
             CODE_SIGN_IDENTITY="" \
             CODE_SIGNING_REQUIRED=NO \
             CODE_SIGNING_ALLOWED=NO \
-            SKIP_INSTALL=NO \
-            INSTALL_PATH=/Applications
-
-      - name: Create IPA package
-        run: |
-          mkdir -p ./artifacts
-          cd ./ios
-          # First try to find app in archive Products/Applications (proper archive)
-          ARCHIVE_PATH=$(find ./build -name "*.xcarchive" -maxdepth 1 | head -1)
-          APP_PATH=""
-          if [ -n "$ARCHIVE_PATH" ]; then
-            ARCHIVE_PATH=$(realpath "$ARCHIVE_PATH" || echo "$ARCHIVE_PATH")
-            echo "Found archive: $ARCHIVE_PATH"
-            echo "Checking archive Products/Applications..."
-            if [ -d "$ARCHIVE_PATH/Products/Applications" ]; then
-              APP_PATH=$(find "$ARCHIVE_PATH/Products/Applications" -name "*.app" -type d | head -1)
-            fi
-          fi
-          # Fallback: Check DerivedData build output (if archive didn't work)
-          if [ -z "$APP_PATH" ]; then
-            echo "Not in archive, checking DerivedData build output..."
-            APP_PATH=$(find ./build/DerivedData -name "*.app" -type d -path "*/Build/Products/Release-iphoneos/*" 2>/dev/null | head -1)
-          fi
-          # Last resort: search anywhere in build directory
-          if [ -z "$APP_PATH" ]; then
-            echo "Searching all build directories..."
-            APP_PATH=$(find ./build -name "*.app" -type d | grep -v ".xcarchive" | head -1)
-          fi
-          if [ -z "$APP_PATH" ]; then
-            echo "Error: No .app bundle found"
-            echo "Archive structure:"
-            [ -n "$ARCHIVE_PATH" ] && find "$ARCHIVE_PATH" -type d -maxdepth 3 || echo "No archive found"
-            echo "DerivedData structure:"
-            find ./build/DerivedData -type d -maxdepth 4 2>/dev/null | head -20 || true
+            SKIP_INSTALL=NO
+          
+          # Verify archive was created
+          if [ ! -d "$ARCHIVE_PATH" ]; then
+            echo "Error: Archive was not created at $ARCHIVE_PATH"
             exit 1
           fi
+          
+          # List archive contents for debugging
+          echo ""
+          echo "=== Archive Structure ==="
+          echo "Archive created at: $ARCHIVE_PATH"
+          echo ""
+          echo "Top-level directories:"
+          ls -la "$ARCHIVE_PATH" || true
+          echo ""
+          echo "Products directory:"
+          ls -la "$ARCHIVE_PATH/Products" 2>/dev/null || echo "Products directory not found"
+          echo ""
+          echo "Products/Applications directory:"
+          ls -la "$ARCHIVE_PATH/Products/Applications" 2>/dev/null || echo "Products/Applications directory not found"
+          echo ""
+          echo "All .app bundles in archive:"
+          find "$ARCHIVE_PATH" -name "*.app" -type d || echo "No .app bundles found"
+          echo ""
+          echo "All directories in Products/Applications:"
+          find "$ARCHIVE_PATH/Products/Applications" -maxdepth 1 -type d 2>/dev/null || echo "Cannot list Products/Applications"
+
+      - name: Create IPA Package
+        working-directory: ./ios
+        id: create-ipa
+        run: |
+          SCHEME="${{ steps.ios-config.outputs.scheme }}"
+          PRODUCT_NAME="${{ steps.ios-config.outputs.product_name }}"
+          ARCHIVE_PATH="./build/$SCHEME.xcarchive"
+          
+          echo "=== Creating IPA Package ==="
+          echo "Archive: $ARCHIVE_PATH"
+          echo "Product Name: $PRODUCT_NAME"
+          echo "Scheme: $SCHEME"
+          echo ""
+          
+          # Find the .app bundle in the archive
+          APP_PATH=""
+          
+          # Method 1: Check Products/Applications with product name (most reliable)
+          if [ -d "$ARCHIVE_PATH/Products/Applications" ]; then
+            echo "Method 1: Checking Products/Applications for $PRODUCT_NAME.app..."
+            if [ -d "$ARCHIVE_PATH/Products/Applications/$PRODUCT_NAME.app" ]; then
+              APP_PATH="$ARCHIVE_PATH/Products/Applications/$PRODUCT_NAME.app"
+              echo "✓ Found app using product name: $APP_PATH"
+            fi
+          fi
+          
+          # Method 2: Check Products/Applications with scheme name
+          if [ -z "$APP_PATH" ] && [ -d "$ARCHIVE_PATH/Products/Applications" ]; then
+            echo "Method 2: Checking Products/Applications for $SCHEME.app..."
+            if [ -d "$ARCHIVE_PATH/Products/Applications/$SCHEME.app" ]; then
+              APP_PATH="$ARCHIVE_PATH/Products/Applications/$SCHEME.app"
+              echo "✓ Found app using scheme name: $APP_PATH"
+            fi
+          fi
+          
+          # Method 3: Find any .app in Products/Applications (excluding .bundle)
+          if [ -z "$APP_PATH" ] && [ -d "$ARCHIVE_PATH/Products/Applications" ]; then
+            echo "Method 3: Searching Products/Applications for any .app bundle..."
+            for candidate in "$ARCHIVE_PATH/Products/Applications"/*.app; do
+              if [ -d "$candidate" ] && [[ ! "$candidate" =~ \.bundle ]]; then
+                APP_PATH="$candidate"
+                echo "✓ Found app: $APP_PATH"
+                break
+              fi
+            done
+          fi
+          
+          # Method 4: Search entire archive recursively (excluding .bundle)
+          if [ -z "$APP_PATH" ]; then
+            echo "Method 4: Searching entire archive recursively..."
+            APP_PATH=$(find "$ARCHIVE_PATH" -name "*.app" -type d | grep -v "\.bundle" | grep -v "dSYMs" | head -1)
+            if [ -n "$APP_PATH" ]; then
+              echo "✓ Found app in archive: $APP_PATH"
+            fi
+          fi
+          
+          # Method 5: Check DerivedData build products
+          if [ -z "$APP_PATH" ]; then
+            echo "Method 5: Checking DerivedData build products..."
+            APP_PATH=$(find ./build/DerivedData -name "*.app" -type d -path "*/Build/Products/Release-iphoneos/*" 2>/dev/null | grep -v "\.bundle" | head -1)
+            if [ -n "$APP_PATH" ]; then
+              echo "✓ Found app in DerivedData: $APP_PATH"
+            fi
+          fi
+          
+          # Method 6: Last resort - search all build directories
+          if [ -z "$APP_PATH" ]; then
+            echo "Method 6: Last resort - searching all build directories..."
+            APP_PATH=$(find ./build -name "*.app" -type d 2>/dev/null | grep -v "\.bundle" | grep -v "dSYMs" | head -1)
+            if [ -n "$APP_PATH" ]; then
+              echo "✓ Found app: $APP_PATH"
+            fi
+          fi
+          
+          # Error if still not found
+          if [ -z "$APP_PATH" ] || [ ! -d "$APP_PATH" ]; then
+            echo ""
+            echo "❌ ERROR: No .app bundle found after exhaustive search"
+            echo ""
+            echo "=== Debug Information ==="
+            echo "Archive path: $ARCHIVE_PATH"
+            echo "Product name: $PRODUCT_NAME"
+            echo "Scheme: $SCHEME"
+            echo ""
+            echo "Archive exists: $([ -d "$ARCHIVE_PATH" ] && echo 'YES' || echo 'NO')"
+            echo "Products/Applications exists: $([ -d "$ARCHIVE_PATH/Products/Applications" ] && echo 'YES' || echo 'NO')"
+            echo ""
+            if [ -d "$ARCHIVE_PATH/Products/Applications" ]; then
+              echo "Contents of Products/Applications:"
+              ls -la "$ARCHIVE_PATH/Products/Applications/" || true
+              echo ""
+              echo "All items in Products/Applications:"
+              find "$ARCHIVE_PATH/Products/Applications" -maxdepth 1 || true
+            fi
+            echo ""
+            echo "All .app directories found in archive:"
+            find "$ARCHIVE_PATH" -name "*.app" -type d || echo "None found"
+            exit 1
+          fi
+          
           APP_NAME=$(basename "$APP_PATH")
-          echo "Found app: $APP_NAME at $APP_PATH"
-          cd ../artifacts
+          echo ""
+          echo "=== App Bundle Found ==="
+          echo "App Name: $APP_NAME"
+          echo "App Path: $APP_PATH"
+          echo "App Size: $(du -sh "$APP_PATH" | cut -f1)"
+          echo ""
+          
+          # Create IPA manually (xcodebuild -exportArchive requires code signing)
+          echo "Creating IPA package..."
+          cd ../..
+          mkdir -p ./artifacts
+          cd ./artifacts
+          
+          # Clean up any previous Payload
+          rm -rf Payload
           mkdir -p Payload
+          
+          # Copy app to Payload
           cp -r "$APP_PATH" Payload/
-          zip -r smart-habit-${{ needs.version.outputs.new_release_version }}.ipa Payload
-          echo "IPA created successfully"
+          
+          # Create IPA
+          IPA_NAME="smart-habit-${{ needs.version.outputs.new_release_version }}.ipa"
+          zip -r "$IPA_NAME" Payload > /dev/null
+          rm -rf Payload
+          
+          IPA_ABSOLUTE_PATH="$(pwd)/$IPA_NAME"
+          IPA_SIZE=$(du -sh "$IPA_ABSOLUTE_PATH" | cut -f1)
+          
+          echo "✓ IPA created successfully!"
+          echo "IPA Path: $IPA_ABSOLUTE_PATH"
+          echo "IPA Size: $IPA_SIZE"
+          echo ""
+          
+          echo "ipa_path=$IPA_ABSOLUTE_PATH" >> $GITHUB_OUTPUT
+
 
       - name: Upload iOS IPA artifact
         uses: actions/upload-artifact@v4
         with:
           name: ios-build
-          path: ./artifacts/smart-habit-${{ needs.version.outputs.new_release_version }}.ipa
+          path: ${{ steps.create-ipa.outputs.ipa_path }}
           retention-days: 1
+          if-no-files-found: error
 
   release:
     name: Create GitHub Release
@@ -314,4 +471,5 @@ jobs:
             ./smart-habit-*.ipa
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 
